[package]
name = "lonely"
version = "0.1.0"
authors = ["Johan Oelrich <johan@oelrich.se>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
engine = { path = "../engine/" }

wasm-logger = "0.2.0"
log = "0.4.8"
wasm-bindgen = "0.2.62"
wasm-bindgen-futures = "0.4.12"
futures = "0.3.5"
js-sys = "0.3.39"

[dependencies.web-sys]
version = "0.3.39"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]

[dev-dependencies]
wasm-bindgen-test = "0.3.12"

[profile.release]
lto = true
opt-level = "z"
